# trabalho-3-andrfranklin

./: .gitignore  CMakeLists.txt  Old_README.md  README.md
data/: maze1.txt  maze2.txt
include/: Food.h  Level.h  Maze.h  Player.h  Snake.h  SnakeGame.h
src/: Food.cpp  Level.cpp  Maze.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp  Snaze.cpp
