cmake_minimum_required(VERSION 3.5)
project(snazeGame VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .h
include_directories( include )

# Cria um execut치vel com nome "snaze", adiciona neste execut치vel os arquivos ...
add_executable( snaze
                src/Food.cpp 
                src/Maze.cpp 
                src/Level.cpp 
                src/Snake.cpp 
                src/Player.cpp
                src/SnakeGame.cpp 
                src/Snaze.cpp )

# The end
